--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
-    <title>Savory</title>
+    <title>Zack Harbaugh</title>
     <link rel="stylesheet" type="text/css" href="reset.css" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,600" rel="stylesheet">
@@ -37,21 +37,22 @@
             Here are the most delicious and savory desserts on the market!</p>
         </div>
         <div class="recipe b">
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-2.png" />
-          <h2>SMOKED LAMB WITH RICE</h2>
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
-          <p class="mins">120 mins</p>
-          <p class="description">
-            Want to feel like your favorite relative came over and made you dinner? This comfort meal of smoked lamb and rice will quickly become a weekend favorite!
-          </p>
-        </div>
+  <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-1.png" />
+  <h2>Tech Talks</h2>
+  <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
+  <p class="mins">20 mins</p>
+  <p class="description">In this week’s Tech Talk we get a little more educational and less social. But that’s ok! We invited some fellow guest students to provide their experience and insight on time management in college and what technology they use to stay on track. <a href="https://soundcloud.com/jarod-p/tech-talks-podcast?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing">your podcast</a>. </p>
+</div>
         <div class="recipe c">
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-5.png" />
-          <h2>GOAT CHEESE SALAD</h2>
+          <h2>Video Place Holder</h2>
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
-          <p class="mins">25 mins</p>
+          <p class="mins">1 mins</p>
           <p class="description">
-            In addition to the full flavor of goat cheese, this salad includes kale, avocado, and farro to balance it out.</p>
+            What will go here? I sure don't know, do you?
+            <p class="description">Dear pizza: I love you. I want others to have what we have. That's why I'm sharing these <a href="https://pizzarecipes.biz">pizza recipes</a> along with my best advice. The world needs this.</p>
+
+          </p>
         </div>
         <div class="recipe d">
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-4.png" />
