colors and picture

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
       <main id="projects">
         <div class="recipe a">
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-1.png" />
+          <img src="images/Question.jpg" />
           <h2>MY RECIPE BLOG POST</h2>
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
           <p class="mins">20 mins</p>
