--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
       <main id="projects">
         <div class="recipe a">
-          <img src="images/Question.jpg" />
+          <img src="images/Question.jpg" alt="Illuminated red question mark"/>
           <h2>MY RECIPE BLOG POST</h2>
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
           <p class="mins">20 mins</p>
@@ -41,14 +41,14 @@
             Here are the most delicious and savory desserts on the market!</p>
         </div>
         <div class="recipe b">
-  <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-1.png" />
+  <img src="images/Mic.jpg" alt="Classic syled microphone" />
   <h2>Tech Talks</h2>
   <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
   <p class="mins">20 mins</p>
   <p class="description">In this week’s Tech Talk we get a little more educational and less social. But that’s ok! We invited some fellow guest students to provide their experience and insight on time management in college and what technology they use to stay on track. <a href="https://soundcloud.com/jarod-p/tech-talks-podcast?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing">your podcast</a>. </p>
 </div>
         <div class="recipe c">
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-5.png" />
+          <img src="images/water.jpg" alt="Bubbly water with lemon"/>
           <h2>Video Place Holder</h2>
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
           <p class="mins">1 mins</p>
@@ -59,7 +59,7 @@
           </p>
         </div>
         <div class="recipe d">
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-4.png" />
+          <img src="images/Words.jpg" alt="Sea of words"/>
           <h2>CHICKEN SANDWICH</h2>
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
           <p class="mins">45 mins</p>
