--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
         <div class="recipe d">
           <img src="images/Words.jpg" alt="Sea of words"/>
-          <h2>CHICKEN SANDWICH</h2>
+          <h2>Blog Place Holder</h2>
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
           <p class="mins">45 mins</p>
           <p class="description">
