--- a/index.html
+++ b/index.html
@@ -101,7 +101,9 @@
       </main>
 
       <footer>
-        <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/savory.svg" class="logo">
+        <div>
+    <p class="copyright">© Zack Harbaugh 2022</p>
+</div>
       </footer>
 
     </div>
