Website clean up

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
     <title>Zack Harbaugh</title>
-    <link rel="stylesheet" type="text/css" href="reset.css" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -32,72 +31,32 @@
       </header>
 
       <main id="projects">
-        <div class="recipe a">
+        <div class="project">
           <img src="images/Question.jpg" alt="Illuminated red question mark"/>
-          <h2>MY RECIPE BLOG POST</h2>
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
-          <p class="mins">20 mins</p>
+          <h2>Resources for Virginia Tech Students </h2>
           <p class="description">
-            Here are the most delicious and savory desserts on the market!</p>
+            Life can be daunting for current or future VT student, <a href="https://www.apsc.vt.edu/students/Undergraduate-Program/Campus-Resources.html"> here</a> are resources for current or future students.</p>
         </div>
-        <div class="recipe b">
+        <div class="project">
   <img src="images/Mic.jpg" alt="Classic syled microphone" />
   <h2>Tech Talks</h2>
-  <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
-  <p class="mins">20 mins</p>
-  <p class="description">In this week’s Tech Talk we get a little more educational and less social. But that’s ok! We invited some fellow guest students to provide their experience and insight on time management in college and what technology they use to stay on track. <a href="https://soundcloud.com/jarod-p/tech-talks-podcast?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing">your podcast</a>. </p>
+  <p class="description">In this week’s Tech Talk we get a little more educational and less social. But that’s ok! We invited some fellow guest students to provide their experience and insight on time management in college and what technology they use to stay on track. <a href="https://soundcloud.com/jarod-p/tech-talks-podcast?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing">Podcast here</a>. </p>
 </div>
-        <div class="recipe c">
+        <div class="project">
           <img src="images/water.jpg" alt="Bubbly water with lemon"/>
-          <h2>Video Place Holder</h2>
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
-          <p class="mins">1 mins</p>
+          <h2>Taste Test Video: Sparkling Water at Different Prices</h2>
           <p class="description">
-            What will go here? I sure don't know, do you?
-            <p class="description">Dear pizza: I love you. I want others to have what we have. That's why I'm sharing these <a href="https://pizzarecipes.biz">pizza recipes</a> along with my best advice. The world needs this.</p>
+            In this video we try and find if name brand sparkling water is actaully worth it. Through a blind taste test we see which brand is best at it's allotted price point. <a href="https://youtu.be/o9HHqtFf7n8">Video here</a>.</p>
 
           </p>
         </div>
-        <div class="recipe d">
+        <div class="project">
           <img src="images/Words.jpg" alt="Sea of words"/>
-          <h2>Blog Place Holder</h2>
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
-          <p class="mins">45 mins</p>
+          <h2>My Addiction and Crash from Socialized Gaming: What I Learned from Wordle</h2>
           <p class="description">
-            We've packed a lot into this one - shredded cabbage, carmalized onions, deep-fried chicken, chipotle mayo, half-sour pickles, and a toasted sesame bun will leave you thoroughly satisfied!</p>
+            In this blog post I talk about the meteoric rise and fall of Wordle in my life. From the first stages of my Wordle addiction to it almost completely fading from my life, I examine the dangers of socialized gaming. <a href="https://medium.com/@zharbaugh/my-addiction-and-crash-from-socialized-gaming-what-i-learned-from-wordle-cbf756c34cfd">Blog here</a></p>
         </div>
-        <div class="recipe e">
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-3.png" />
-          <h2>SWEET CHURROS</h2>
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
-          <p class="mins">90 mins</p>
-          <p class="description">
-            Making this classic summer treat at home will remind you of a childhood spent in the park.</p>
-        </div>
-        <div class="recipe f">
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-6.png" />
-          <h2>BERRY PARFAIT</h2>
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
-          <p class="mins">10 mins</p>
-          <p class="description">
-            This low-calorie, vitamin-packed parfait is great for breakfast, dessert, or post-workout!</p>
-        </div>
-        <div class="recipe e">
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-3.png" />
-          <h2>SWEET CHURROS</h2>
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
-          <p class="mins">90 mins</p>
-          <p class="description">
-            Making this classic summer treat at home will remind you of a childhood spent in the park.</p>
-        </div>
-        <div class="recipe f">
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-6.png" />
-          <h2>BERRY PARFAIT</h2>
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
-          <p class="mins">10 mins</p>
-          <p class="description">
-            This low-calorie, vitamin-packed parfait is great for breakfast, dessert, or post-workout!</p>
-        </div>
+
       </main>
 
       <footer>
