Changed color and font

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@100&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@100&family=IBM+Plex+Serif:wght@100;200&display=swap" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@100&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@100&family=IBM+Plex+Serif:wght@100;200&display=swap" rel="stylesheet">
   </head>
 
   <body>
@@ -21,7 +21,7 @@
       <header>
         <div class="wrapper">
     <h1>Zack Harbaugh</h1>
-      <p class="bio"> I am an English major that hates to read. Recently I have been moonlighting as an amateur shaman.
+      <p class="bio"> I am an English major that hates to read. Recently I have been moonlighting as an amateur shaman. On this website you will find a variety of mulit-media projects that I completed this year. I hope you enjoy!
       </p>
     <div class="buttonBox">
       <a class="myButton" href="#projects">Go</a>
@@ -35,18 +35,18 @@
           <img src="images/Question.jpg" alt="Illuminated red question mark"/>
           <h2>Resources for Virginia Tech Students </h2>
           <p class="description">
-            Life can be daunting for current or future VT student, <a href="https://www.apsc.vt.edu/students/Undergraduate-Program/Campus-Resources.html"> here</a> are resources for current or future students.</p>
+            Life can be daunting for current or future VT student, <a href="https://www.apsc.vt.edu/students/Undergraduate-Program/Campus-Resources.html"  target="_blank"> here</a> are resources for current or future students.</p>
         </div>
         <div class="project">
   <img src="images/Mic.jpg" alt="Classic syled microphone" />
   <h2>Tech Talks</h2>
-  <p class="description">In this week’s Tech Talk we get a little more educational and less social. But that’s ok! We invited some fellow guest students to provide their experience and insight on time management in college and what technology they use to stay on track. <a href="https://soundcloud.com/jarod-p/tech-talks-podcast?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing">Podcast here</a>. </p>
+  <p class="description">In this week’s Tech Talk we get a little more educational and less social. But that’s ok! We invited some fellow guest students to provide their experience and insight on time management in college and what technology they use to stay on track. <a href="https://soundcloud.com/jarod-p/tech-talks-podcast?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank">Podcast here</a>. </p>
 </div>
         <div class="project">
           <img src="images/water.jpg" alt="Bubbly water with lemon"/>
           <h2>Taste Test Video: Sparkling Water at Different Prices</h2>
           <p class="description">
-            In this video we try and find if name brand sparkling water is actaully worth it. Through a blind taste test we see which brand is best at it's allotted price point. <a href="https://youtu.be/o9HHqtFf7n8">Video here</a>.</p>
+            In this video we try and find if name brand sparkling water is actaully worth it. Through a blind taste test we see which brand is best at it's allotted price point. <a href="https://youtu.be/o9HHqtFf7n8" target="_blank">Video here</a>.</p>
 
           </p>
         </div>
@@ -54,7 +54,7 @@
           <img src="images/Words.jpg" alt="Sea of words"/>
           <h2>My Addiction and Crash from Socialized Gaming: What I Learned from Wordle</h2>
           <p class="description">
-            In this blog post I talk about the meteoric rise and fall of Wordle in my life. From the first stages of my Wordle addiction to it almost completely fading from my life, I examine the dangers of socialized gaming. <a href="https://medium.com/@zharbaugh/my-addiction-and-crash-from-socialized-gaming-what-i-learned-from-wordle-cbf756c34cfd">Blog here</a></p>
+            In this blog post I talk about the meteoric rise and fall of Wordle in my life. From the first stages of my Wordle addiction to it almost completely fading from my life, I examine the dangers of socialized gaming. <a href="https://medium.com/@zharbaugh/my-addiction-and-crash-from-socialized-gaming-what-i-learned-from-wordle-cbf756c34cfd" target="_blank">Blog here</a></p>
         </div>
 
       </main>
